--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "build": "echo 'No build step required'"
+    "build": "echo 'No build step required'",
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
